Fix the service card title dynamic size
The dynamic sizing the the service card's first row made it so that the description would often look misaligned when products with different a number of lines for the description were put next to each other. This adds a fixed width for the first row of the service card.

Work is related to manifoldco/engineering#8934

--- a/src/components/manifold-service-card-view/manifold-service-card-view.css
+++ b/src/components/manifold-service-card-view/manifold-service-card-view.css
@@ -35,7 +35,7 @@
     'logo name'
     'info info'
     'tags tags';
-  grid-template-rows: min-content auto min-content;
+  grid-template-rows: 1.4rem auto min-content;
   grid-template-columns: var(--manifold-product-logo-s) auto;
   box-sizing: border-box;
   height: 100%;
@@ -66,7 +66,7 @@
     'logo name'
     'info info'
     'tags tags';
-  grid-template-rows: min-content auto min-content;
+  grid-template-rows: 1.4rem auto min-content;
   grid-template-columns: var(--manifold-product-logo-s) auto;
   box-sizing: border-box;
   height: 100%;
